# magichome-gui

./: Cargo.toml  LICENSE  README.md
src/: logger.rs  main.rs
src/output/: magic_home.rs  mod.rs
src/support/: mod.rs
