[package]
name = "rust-led"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = { version = "0.4", features = ["std"] }
lazy_static = "1.4.0"

# gui
imgui = "0.7.0"
clipboard = "0.5"
glium = { version = "0.29", default-features = true }
image = "0.23"
imgui-glium-renderer = "0.7.0"
imgui-winit-support = "0.7.1"

# Midi
midi-control = "0.2.0"
